코드 가독성 및 try-catch 개선